infrastructure/kubernetes/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  revisionHistoryLimit: 15
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-015-33/momo-store/momo-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: frontend
              containerPort: 80
      imagePullSecrets:
        - name: docker-config-secret
